--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-clock-interval",
-  "version": "1.0.9",
+  "version": "2.0.1",
   "description": "React Native Time interval control similar to iOS12 Bedtime picker using ReactART",
   "main": "index.js",
   "scripts": {
@@ -49,6 +49,9 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "tinycolor2": "^1.4.1"
+  },
+  "peerDependencies": {
+    "@react-native-community/art": "^1.0.2"
   },
   "typings": "index.d.ts"
 }
